--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <sup>O</sup>
                 </figcaption>
         </figure>
-        <p class="description">
+        <p id="description" class="description">
             Overcast clouds
         </p>
         <ul>
